--- a/empresa/portal.html
+++ b/empresa/portal.html
@@ -178,8 +178,12 @@
 
                     <!-- Acciones -->
                     <div class="flex gap-2">
+                        <button onclick="saveToStorage()"
+                            class="bg-green-600 hover:bg-green-700 text-white font-bold px-6 py-2 rounded-lg shadow-lg hover:shadow-green-500/30 transition flex items-center transform hover:scale-105">
+                            <i class="fa-solid fa-save mr-2"></i> Guardar Todo
+                        </button>
                         <button onclick="window.print()" class="bg-slate-700 text-white px-6 py-2 rounded-lg font-bold">
-                            <i class="fa fa-print"></i> Imprimir PDF
+                            <i class="fa-solid fa-print mr-2"></i> Imprimir PDF
                         </button>
                     </div>
                 </div>
@@ -606,8 +610,6 @@
                 if (bsTexts[2]) bsTexts[2].textContent = "Bs " + (pDist * euro).toLocaleString('es-VE', { minimumFractionDigits: 2 });
                 if (priceTexts[2]) priceTexts[2].textContent = pDist.toFixed(2) + " $";
             });
-
-            saveToStorage(); // Guardar cada vez que algo cambie
         }
 
         function showSaveStatus() {
@@ -616,7 +618,7 @@
                 status = document.createElement('div');
                 status.id = 'save-status';
                 status.className = 'fixed bottom-4 right-4 bg-green-600 text-white px-4 py-2 rounded-full text-xs font-bold shadow-lg flex items-center gap-2 transition-opacity duration-500';
-                status.innerHTML = '<i class="fa fa-check"></i> Cambios Sincronizados';
+                status.innerHTML = '<i class="fa fa-check"></i> Cambios Guardados Permanentemente';
                 document.body.appendChild(status);
             }
             status.style.opacity = '1';
