--- a/empresa/interiores.html
+++ b/empresa/interiores.html
@@ -147,27 +147,22 @@
 
             <!-- Menu Items -->
             <div
-                style="display: flex; gap: 4px; padding: 8px 12px; background: rgba(30,41,59,0.9); border-radius: 9999px; border: 1px solid rgba(255,255,255,0.2); overflow-x: auto; max-width: 600px;">
+                style="display: flex; gap: 20px; padding: 8px 12px; align-items: center; overflow-x: auto; max-width: 100%;">
                 <a href="index.html#page-inicio"
-                    style="padding: 8px 16px; border-radius: 9999px; font-size: 14px; font-weight: 500; color: white; text-decoration: none; white-space: nowrap; display: block; background: transparent; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.2)'"
-                    onmouseout="this.style.background='transparent'">Inicio</a>
+                    style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Inicio</a>
                 <a href="index.html#page-asesor"
-                    style="padding: 8px 16px; border-radius: 9999px; font-size: 14px; font-weight: 500; color: white; text-decoration: none; white-space: nowrap; display: block; background: transparent; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.2)'"
-                    onmouseout="this.style.background='transparent'">🧠 Asesor IA</a>
+                    style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Asesor IA</a>
                 <a href="index.html#page-productos"
-                    style="padding: 8px 16px; border-radius: 9999px; font-size: 14px; font-weight: 500; color: white; text-decoration: none; white-space: nowrap; display: block; background: transparent; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.2)'"
-                    onmouseout="this.style.background='transparent'">Productos</a>
+                    style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Productos</a>
                 <a href="index.html#page-pilares"
-                    style="padding: 8px 16px; border-radius: 9999px; font-size: 14px; font-weight: 500; color: white; text-decoration: none; white-space: nowrap; display: block; background: transparent; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.2)'"
-                    onmouseout="this.style.background='transparent'">Pilares</a>
+                    style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Pilares</a>
                 <a href="index.html#page-contacto"
-                    style="padding: 8px 16px; border-radius: 9999px; font-size: 14px; font-weight: 500; color: white; text-decoration: none; white-space: nowrap; display: block; background: transparent; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.2)'"
-                    onmouseout="this.style.background='transparent'">Contacto</a>
+                    style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Contacto</a>
             </div>
 
             <!-- Actions -->
