--- a/empresa/interiores.html
+++ b/empresa/interiores.html
@@ -135,19 +135,17 @@
 
 <body>
     <!-- Navigation Bar -->
-    <div style="position: fixed; top: 0; left: 0; right: 0; width: 100%; z-index: 99999; background: #0f172a; padding: 16px 24px; box-shadow: 0 4px 6px rgba(0,0,0,0.3); display: block !important; visibility: visible !important; opacity: 1 !important;"
+    <div style="position: fixed; top: 0; left: 0; right: 0; width: 100%; z-index: 99999; background: #0f172a; padding: 12px 24px; box-shadow: 0 4px 6px rgba(0,0,0,0.3); display: block !important;"
         id="main-header">
         <div
-            style="max-width: 1280px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; gap: 16px;">
+            style="max-width: 1280px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; gap: 20px;">
             <!-- Logo -->
-            <a href="index.html"
-                style="display: flex; align-items: center; gap: 8px; padding: 8px 16px; border-radius: 9999px; border: 1px solid rgba(255,255,255,0.1); text-decoration: none; background: rgba(30,41,59,0.8);">
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
                 <img src="images/logo.png" alt="Ultra Seco" style="height: 32px; filter: brightness(0) invert(1);">
             </a>
 
             <!-- Menu Items -->
-            <div
-                style="display: flex; gap: 20px; padding: 8px 12px; align-items: center; overflow-x: auto; max-width: 100%;">
+            <div style="display: flex; gap: 24px; align-items: center; flex-wrap: wrap; justify-content: center;">
                 <a href="index.html#page-inicio"
                     style="font-size: 14px; font-weight: 600; color: white; text-decoration: none; white-space: nowrap; transition: color 0.3s;"
                     onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">Inicio</a>
@@ -166,19 +164,20 @@
             </div>
 
             <!-- Actions -->
-            <div style="display: flex; align-items: center; gap: 16px;">
+            <div style="display: flex; align-items: center; gap: 20px;">
                 <button onclick="window.history.back()"
-                    style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background: rgba(30,41,59,0.8); color: white; border-radius: 9999px; font-weight: bold; border: 1px solid rgba(255,255,255,0.2); cursor: pointer; font-size: 14px; transition: background 0.3s;"
-                    onmouseover="this.style.background='rgba(255,255,255,0.1)'"
-                    onmouseout="this.style.background='rgba(30,41,59,0.8)'">
+                    style="display: flex; align-items: center; gap: 8px; background: transparent; color: white; font-weight: bold; border: none; cursor: pointer; font-size: 14px; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">
                     <i class="fa-solid fa-arrow-left" style="font-size: 14px;"></i> <span>Volver</span>
                 </button>
                 <a href="https://wa.me/584146023797" target="_blank"
-                    style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background: linear-gradient(to right, #10b981, #059669); color: white; border-radius: 9999px; font-weight: bold; text-decoration: none; font-size: 14px; box-shadow: 0 4px 6px rgba(16,185,129,0.2);">
+                    style="display: flex; align-items: center; gap: 8px; color: #10b981; font-weight: bold; text-decoration: none; font-size: 14px; transition: color 0.3s;"
+                    onmouseover="this.style.color='#34d399'" onmouseout="this.style.color='#10b981'">
                     <i class="fa-brands fa-whatsapp" style="font-size: 16px;"></i> <span>Asesor</span>
                 </a>
                 <button onclick="window.location.href='index.html#cart'"
-                    style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #1e293b; color: white; border-radius: 9999px; border: 1px solid rgba(255,255,255,0.1); cursor: pointer; box-shadow: 0 2px 4px rgba(0,0,0,0.2);">
+                    style="display: flex; align-items: center; justify-content: center; background: transparent; color: white; border: none; cursor: pointer; transition: color 0.3s;"
+                    onmouseover="this.style.color='#00d4ff'" onmouseout="this.style.color='white'">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </button>
             </div>
