--- a/empresa/portal.html
+++ b/empresa/portal.html
@@ -9,6 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+    <!-- Firebase SDK (Compat Version) -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -188,20 +192,53 @@
                                 <i class="fa-solid fa-print mr-2"></i> PDF
                             </button>
                         </div>
-                        <!-- Google Sheets Sync (Nuevo) -->
-                        <div class="flex gap-2">
-                            <input type="text" id="sheet-url" placeholder="URL CSV Google Sheets"
-                                value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeXNSKBis9vOIL_POvseYb0pPtyfRlvQT5X764jon7Yi4UKQ0iiA-1PbTPW6abYZkq8NeRYDt84Bo-/pub?output=csv"
-                                class="text-[10px] p-2 border rounded w-48 outline-none focus:ring-1 focus:ring-blue-400">
-                            <button onclick="syncWithGoogleSheets()"
-                                class="bg-blue-500 hover:bg-blue-600 text-white font-bold px-3 py-1 rounded text-[10px] transition flex items-center gap-1">
-                                <i class="fa-solid fa-sync"></i> Sincronizar
-                            </button>
+                        <!-- Sincronización Doble (NUEVO) -->
+                        <div class="flex flex-col gap-2 p-2 bg-slate-50 border rounded-lg">
+                            <div class="flex gap-2 items-center">
+                                <input type="text" id="sheet-url" placeholder="URL CSV Google Sheets"
+                                    value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeXNSKBis9vOIL_POvseYb0pPtyfRlvQT5X764jon7Yi4UKQ0iiA-1PbTPW6abYZkq8NeRYDt84Bo-/pub?output=csv"
+                                    class="text-[10px] p-2 border rounded w-48 outline-none focus:ring-1 focus:ring-blue-400">
+                                <button onclick="syncWithGoogleSheets()"
+                                    class="bg-blue-500 hover:bg-blue-600 text-white font-bold px-3 py-1 rounded text-[10px] transition flex items-center gap-1">
+                                    <i class="fa-solid fa-sync"></i> Sheets
+                                </button>
+                            </div>
+                            <div class="flex gap-2 items-center border-t pt-2 border-slate-200">
+                                <div id="db-status" class="w-2 h-2 rounded-full bg-gray-400 ml-1"
+                                    title="Status Firebase"></div>
+                                <button onclick="toggleFirebaseConfig()"
+                                    class="text-[10px] text-blue-600 hover:underline">Configurar Firebase</button>
+                                <button onclick="syncFirebase()" id="btn-sync-firebase"
+                                    class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-3 py-1 rounded text-[10px] transition flex items-center gap-1 ml-auto">
+                                    <i class="fa-solid fa-cloud-arrow-up"></i> Firebase
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <p class="text-[9px] text-slate-400 mt-2">Para sincronizar: Archivo > Compartir > Publicar en la Web >
-                    CSV > Copiar URL y pegar arriba.</p>
+                <p class="text-[9px] text-slate-400 mt-2">Sincroniza tus precios desde la nube usando Google Sheets o
+                    Firebase Realtime Database.</p>
+            </div>
+
+            <!-- MODAL CONFIG FIREBASE -->
+            <div id="firebase-modal"
+                class="hidden fixed inset-0 z-[100] flex items-center justify-center bg-black/50 backdrop-blur-sm">
+                <div class="bg-white p-6 rounded-xl shadow-2xl max-w-md w-full mx-4">
+                    <h3 class="text-lg font-bold mb-4 flex items-center gap-2">
+                        <i class="fa-solid fa-fire text-orange-500"></i> Configuración Firebase
+                    </h3>
+                    <p class="text-xs text-slate-500 mb-4">Pega aquí el objeto <code>firebaseConfig</code> obtenido de
+                        la consola de Firebase.</p>
+                    <textarea id="firebase-config-input" placeholder='{ "apiKey": "...", "databaseURL": "...", ... }'
+                        class="w-full h-40 p-3 text-xs font-mono border rounded-lg mb-4 outline-none focus:ring-2 focus:ring-blue-500 bg-slate-50"></textarea>
+                    <div class="flex gap-2">
+                        <button onclick="saveFirebaseConfig()"
+                            class="flex-1 bg-blue-600 text-white font-bold py-2 rounded-lg hover:bg-blue-700">Guardar y
+                            Conectar</button>
+                        <button onclick="toggleFirebaseConfig()"
+                            class="px-4 py-2 text-slate-500 hover:bg-slate-100 rounded-lg">Cerrar</button>
+                    </div>
+                </div>
             </div>
 
             <div class="print-header">
@@ -553,13 +590,139 @@
                 const savedUrl = localStorage.getItem('google_sheet_url');
                 if (savedUrl) {
                     document.getElementById('sheet-url').value = savedUrl;
-                    syncWithGoogleSheets();
-                } else {
-                    recalcAll();
+                    // syncWithGoogleSheets(); // Opcional: auto-sync sheets
                 }
+
+                // Autoconectar Firebase si hay config
+                initFirebaseFromStorage();
+
+                recalcAll();
             } else {
                 document.getElementById('login-error').classList.remove('hidden');
             }
+        }
+
+        // ==========================================
+        // FIREBASE LOGIC
+        // ==========================================
+        let db = null;
+
+        function toggleFirebaseConfig() {
+            document.getElementById('firebase-modal').classList.toggle('hidden');
+        }
+
+        function saveFirebaseConfig() {
+            const configText = document.getElementById('firebase-config-input').value;
+            try {
+                const config = JSON.parse(configText);
+                localStorage.setItem('firebase_config', configText);
+                initFirebase(config);
+                toggleFirebaseConfig();
+                alert("✅ Configuración de Firebase guardada y conectada.");
+            } catch (e) {
+                alert("❌ Error: JSON inválido. Asegúrate de copiar el objeto de configuración correctamente.");
+            }
+        }
+
+        function initFirebaseFromStorage() {
+            const savedConfig = localStorage.getItem('firebase_config');
+            if (savedConfig) {
+                document.getElementById('firebase-config-input').value = savedConfig;
+                try {
+                    initFirebase(JSON.parse(savedConfig));
+                } catch (e) {
+                    console.error("Error cargando Firebase config guardado");
+                }
+            }
+        }
+
+        function initFirebase(config) {
+            if (firebase.apps.length === 0) {
+                firebase.initializeApp(config);
+            }
+            db = firebase.database();
+
+            // Actualizar status UI
+            const statusDot = document.getElementById('db-status');
+            statusDot.classList.remove('bg-gray-400', 'bg-red-500');
+            statusDot.classList.add('bg-green-500');
+
+            // Escuchar cambios en tiempo real
+            db.ref('productos').on('value', (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    updateTableFromFirebase(data);
+                    console.log("🔥 Datos sincronizados desde Firebase");
+                    showSaveStatus("Datos actualizados desde la nube");
+                }
+            });
+
+            // Escuchar tasa euro
+            db.ref('configuracion/tasa_euro_bcv').on('value', (snapshot) => {
+                const tasa = snapshot.val();
+                if (tasa) {
+                    document.getElementById('euro-rate').value = tasa;
+                    recalcAll();
+                }
+            });
+        }
+
+        function syncFirebase() {
+            if (!db) return alert("❌ Primero configura Firebase.");
+
+            const syncBtn = document.getElementById('btn-sync-firebase');
+            syncBtn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i> Subiendo...';
+
+            const data = {
+                tasa_euro_bcv: parseFloat(document.getElementById('euro-rate').value),
+                ultima_actualizacion: new Date().toISOString()
+            };
+
+            const productos = {};
+            document.querySelectorAll('.product-row').forEach(row => {
+                const name = row.querySelector('.font-bold').textContent.trim();
+                const key = name.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
+
+                productos[key] = {
+                    nombre: name,
+                    presentacion: row.cells[1].textContent.trim(),
+                    costo: parseFloat(row.querySelector('.cost').value),
+                    precio_detal: parseFloat(row.querySelector('.price-detal').value),
+                    precio_mayor: parseFloat(row.querySelector('.price-mayor').value),
+                    distribuidor: parseFloat(row.querySelector('.price-dist').value)
+                };
+            });
+
+            // Guardar en Firebase
+            Promise.all([
+                db.ref('productos').set(productos),
+                db.ref('configuracion').set(data)
+            ]).then(() => {
+                alert("🚀 Datos subidos a Firebase correctamente.");
+                syncBtn.innerHTML = '<i class="fa-solid fa-cloud-arrow-down"></i> Sincronizar';
+            }).catch(err => {
+                alert("❌ Error al subir datos: " + err.message);
+                syncBtn.innerHTML = '<i class="fa-solid fa-cloud-arrow-down"></i> Sincronizar';
+            });
+        }
+
+        function updateTableFromFirebase(productos) {
+            const rows = document.querySelectorAll('.product-row');
+
+            rows.forEach(row => {
+                const rowName = row.querySelector('.font-bold').textContent.trim();
+                // Buscar en el objeto de productos de Firebase
+                for (const key in productos) {
+                    if (productos[key].nombre === rowName) {
+                        row.querySelector('.cost').value = productos[key].costo || 0;
+                        row.querySelector('.price-detal').value = productos[key].precio_detal || 0;
+                        row.querySelector('.price-mayor').value = productos[key].precio_mayor || 0;
+                        row.querySelector('.price-dist').value = productos[key].distribuidor || 0;
+                        break;
+                    }
+                }
+            });
+            recalcAll();
         }
 
         async function syncWithGoogleSheets() {
